Coop Diff: Intro section, new content

--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -62,10 +62,10 @@
 				</div>
 			</section>
 			<section class="px-8 py-16">
-				<div class="mx-auto max-w-2xl text-center">
-					<h2 class="font-serif font-light text-3xl"> More than a promise </h2>
+				<div class="mx-auto max-w-xl text-center">
+					<h2 class="font-serif font-light text-3xl">More than a promise</h2>
 					<p>
-						Reliable and affordable power. That’s our first priority and the driving force behind everything
+						Reliable and affordable power. That's our first priority and the driving force behind everything
 						we do.
 					</p>
 					<p>
@@ -74,9 +74,42 @@
 						Our value is further strengthened by investing in our members, employees, consumers, and
 						communities beyond the grid.
 					</p>
-					<p>
-						These investments would not be successful without the collaborative efforts of our members,
-						communities and other stakeholders. Together, we are driving collective impact.
+					<div class="mx-auto max-w-lg">
+						<ul class="mt-4 list-disc space-y-2 text-left">
+							<li>We empower members to make new investments and encourage an all-of-the-above resource
+								approach
+								to drive rural economic development.</li>
+							<li>We keep our communities and employees safe as we uphold a culture of safety in the
+								field, at
+								the office, and at home.</li>
+							<li>We are good neighbors to the rural communities we serve, giving back and supporting our
+								local
+								economies.</li>
+							<li>We protect the environment in the states we serve because it provides us with the
+								abundant
+								natural resources that power our communities.</li>
+							<li>We're all in this together, working closely with our cooperative members to reach our
+								energy
+								goals and ensure affordability and reliability for our consumers.</li>
+						</ul>
+					</div>
+					<p class="mt-8">
+						These investments would not be successful without the collaborative efforts of our members, who
+						operate according to the 7 Cooperative Principles:
+					</p>
+					<div class="flex justify-center">
+						<ol class="list-decimal space-y-2 inline-block text-left" style="font-size:16px">
+							<li>Open and voluntary membership</li>
+							<li>Democratic member control</li>
+							<li>Members' economic participation</li>
+							<li>Autonomy and independence</li>
+							<li>Education, training and information</li>
+							<li>Cooperation among cooperatives</li>
+							<li>Concern for community</li>
+						</ol>
+					</div>
+					<p class="mt-4">
+						Together, we are driving collective impact. That's the cooperative difference.
 					</p>
 				</div>
 			</section>
@@ -270,7 +303,6 @@
 						<img src="./assets/images/efficiency/house-white.svg" />
 					</div>
 				</div>
-
 
 				<!-- Heading & Summary -->
 				<div class="bg-gray-light py-10">
