--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -115,7 +115,43 @@
 			</section>
 
 
-
+			<section class="bg-gray-light relative px-8 py-16">
+				<div
+					class="relative z-10 grid grid-cols-1 max-w-52 mx-auto md:max-w-lg md:place-items-center md:grid-cols-2 lg:grid-cols-4 gap-8 text-center lg:max-w-3xl lg:mx-auto">
+					<div class="flex flex-col gap-4 items-center w-full">
+						<img class="w-20"
+							src="https://tristate.coop/sites/default/files/images/icons/efficiency/renewable-energy.svg" />
+						<a href="#energy-investments"
+							class="w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
+							Energy Investments
+						</a>
+					</div>
+					<div class="flex flex-col gap-4 items-center w-full">
+						<img class="w-20"
+							src="https://tristate.coop/sites/default/files/images/icons/efficiency/mountain.svg" />
+						<a href="#preserve-and-protect"
+							class="w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
+							Preserve &amp; Protect
+						</a>
+					</div>
+					<div class="flex flex-col gap-4 items-center w-full">
+						<img class="w-20"
+							src="https://tristate.coop/sites/default/files/images/icons/efficiency/house.svg" />
+						<a href="#good-neighbors"
+							class="w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
+							Good Neighbors
+						</a>
+					</div>
+					<div class="flex flex-col gap-4 items-center w-full">
+						<img class="w-20"
+							src="https://tristate.coop/sites/default/files/images/icons/efficiency/environment.svg" />
+						<a href="#shared-success"
+							class="w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
+							Shared Success
+						</a>
+					</div>
+				</div>
+			</section>
 
 
 			<section id="energy-investments">
