Coop Diff: New layout for main content section

--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -61,58 +61,134 @@
 					<h1 class="text-4xl md:text-5xl font-serif text-balance">The cooperative difference</h1>
 				</div>
 			</section>
+
+
+
+
 			<section class="px-8 py-16">
-				<div class="mx-auto max-w-xl text-center">
+				<div class="mx-auto max-w-5xl md:text-center">
 					<h2 class="font-serif font-light text-3xl">More than a promise</h2>
-					<p>
-						Reliable and affordable power. That's our first priority and the driving force behind everything
-						we do.
-					</p>
-					<p>
-						With the support of our 40 members, Tri-State has continuously met this commitment and remained
-						a high-performing, agile cooperative power supplier across the Western states we proudly serve.
-						Our value is further strengthened by investing in our members, employees, consumers, and
-						communities beyond the grid.
-					</p>
-					<div class="mx-auto max-w-lg">
-						<ul class="mt-4 list-disc space-y-2 text-left">
-							<li>We empower members to make new investments and encourage an all-of-the-above resource
-								approach
-								to drive rural economic development.</li>
-							<li>We keep our communities and employees safe as we uphold a culture of safety in the
-								field, at
-								the office, and at home.</li>
-							<li>We are good neighbors to the rural communities we serve, giving back and supporting our
-								local
-								economies.</li>
-							<li>We protect the environment in the states we serve because it provides us with the
-								abundant
-								natural resources that power our communities.</li>
-							<li>We're all in this together, working closely with our cooperative members to reach our
-								energy
-								goals and ensure affordability and reliability for our consumers.</li>
+				</div>
+
+				<div class="mx-auto mt-8 max-w-5xl md:grid md:gap-6 md:grid-cols-5 md:items-center lg:gap-12">
+					<div class="md:-mt-8 md:col-span-2">
+						<p class="!text-lg">
+							Reliable and affordable power. That's our first priority and the driving force behind
+							everything we do.
+						</p>
+						<p class="mt-4">
+							With the support of our 40 members, Tri-State has continuously met this commitment and
+							remained a
+							high-performing,
+							agile cooperative power supplier across the Western states we proudly serve. Our value is
+							further
+							strengthened
+							by investing in our members, employees, consumers, and communities beyond the grid.
+						</p>
+					</div>
+					<div class="mx-auto max-w-lg  md:col-span-3 md:p-6">
+						<ul class="list-none space-y-4 text-left p-0">
+							<li class="flex items-start gap-3">
+								<img src="/assets/images/square-check-regular-gray.svg" class="mt-1 w-5 h-5"
+									alt="check">
+								<span>We empower members to make new investments and encourage an all-of-the-above
+									resource
+									approach to drive
+									rural economic development.</span>
+							</li>
+							<li class="flex items-start gap-3">
+								<img src="/assets/images/square-check-regular-gray.svg" class="mt-1 w-5 h-5"
+									alt="check">
+								<span>We keep our communities and employees safe as we uphold a culture of safety in the
+									field, at the office,
+									and at home.</span>
+							</li>
+							<li class="flex items-start gap-3">
+								<img src="/assets/images/square-check-regular-gray.svg" class="mt-1 w-5 h-5"
+									alt="check">
+								<span>We are good neighbors to the rural communities we serve, giving back and
+									supporting
+									our local
+									economies.</span>
+							</li>
+							<li class="flex items-start gap-3">
+								<img src="/assets/images/square-check-regular-gray.svg" class="mt-1 w-5 h-5"
+									alt="check">
+								<span>We protect the environment in the states we serve because it provides us with the
+									abundant natural
+									resources that power our communities.</span>
+							</li>
+							<li class="flex items-start gap-3">
+								<img src="/assets/images/square-check-regular-gray.svg" class="mt-1 w-5 h-5"
+									alt="check">
+								<span>We're all in this together, working closely with our cooperative members to reach
+									our
+									energy goals and
+									ensure affordability and reliability for our consumers.</span>
+							</li>
 						</ul>
 					</div>
-					<p class="mt-8">
-						These investments would not be successful without the collaborative efforts of our members, who
-						operate according to the 7 Cooperative Principles:
-					</p>
-					<div class="flex justify-center">
-						<ol class="list-decimal space-y-2 inline-block text-left" style="font-size:16px">
-							<li>Open and voluntary membership</li>
-							<li>Democratic member control</li>
-							<li>Members' economic participation</li>
-							<li>Autonomy and independence</li>
-							<li>Education, training and information</li>
-							<li>Cooperation among cooperatives</li>
-							<li>Concern for community</li>
-						</ol>
-					</div>
-					<p class="mt-4">
-						Together, we are driving collective impact. That's the cooperative difference.
+				</div>
+
+				<div class="mx-auto mt-20 max-w-xl text-center">
+					<p class="!text-lg font-serif">
+						These investments would not be successful without the collaborative efforts of our members,
+						who operate according to the <span class="inline-block">7 Cooperative Principles:</span>
 					</p>
 				</div>
+
+				<div class="mx-auto mt-8  flex flex-wrap justify-center text-center">
+					<div class="basis-1/2 md:basis-1/4 flex flex-col">
+						<div class="m-2 bg-gray-light p-4 rounded flex-1">
+							<div class="text-2xl font-bold">1</div>
+							<div class="mt-2">Open and voluntary membership</div>
+						</div>
+					</div>
+					<div class="basis-1/2 md:basis-1/4 flex flex-col">
+						<div class="m-2 bg-gray-light p-4 rounded flex-1">
+							<div class="text-2xl font-bold">2</div>
+							<div class="mt-2">Democratic member control</div>
+						</div>
+					</div>
+					<div class="basis-1/2 md:basis-1/4 flex flex-col">
+						<div class="m-2 bg-gray-light p-4 rounded flex-1">
+							<div class="text-2xl font-bold">3</div>
+							<div class="mt-2">Members' economic participation</div>
+						</div>
+					</div>
+					<div class="basis-1/2 md:basis-1/4 flex flex-col">
+						<div class="m-2 bg-gray-light p-4 rounded flex-1">
+							<div class="text-2xl font-bold">4</div>
+							<div class="mt-2">Autonomy and independence</div>
+						</div>
+					</div>
+					<div class="basis-1/2 md:basis-1/4 flex flex-col">
+						<div class="m-2 bg-gray-light p-4 rounded flex-1">
+							<div class="text-2xl font-bold">5</div>
+							<div class="mt-2">Education, training and information</div>
+						</div>
+					</div>
+					<div class="basis-1/2 md:basis-1/4 flex flex-col">
+						<div class="m-2 bg-gray-light p-4 rounded flex-1">
+							<div class="text-2xl font-bold">6</div>
+							<div class="mt-2">Cooperation among cooperatives</div>
+						</div>
+					</div>
+					<div class="basis-1/2 md:basis-1/4 flex flex-col">
+						<div class="m-2 bg-gray-light p-4 rounded flex-1">
+							<div class="text-2xl font-bold">7</div>
+							<div class="mt-2">Concern for community</div>
+						</div>
+					</div>
+				</div>
+
+
+				<p class="mt-12 text-center max-w-2xl mx-auto !text-2xl">
+					Together, we are driving collective impact. That's the cooperative difference.
+				</p>
 			</section>
+
+
 
 
 			<section class="bg-gray-light relative px-8 py-16">
