--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -78,12 +78,10 @@
 						</p>
 						<p class="mt-4">
 							With the support of our 40 members, Tri-State has continuously met this commitment and
-							remained a
-							high-performing,
-							agile cooperative power supplier across the Western states we proudly serve. Our value is
-							further
-							strengthened
-							by investing in our members, employees, consumers, and communities beyond the grid.
+							remained a high-performing, agile
+							cooperative power supplier across the Western states we proudly serve. Our value is further
+							strengthened by investing in
+							our members, employees, consumers, and communities beyond the grid.
 						</p>
 					</div>
 					<div class="mx-auto max-w-lg  md:col-span-3 md:p-6">
@@ -183,7 +181,7 @@
 				</div>
 
 
-				<p class="mt-12 text-center max-w-2xl mx-auto !text-2xl">
+				<p class="mt-12 text-center max-w-2xl mx-auto !text-2xl text-pretty">
 					Together, we are driving collective impact. That's the cooperative difference.
 				</p>
 			</section>
@@ -193,36 +191,53 @@
 
 			<section class="bg-gray-light relative px-8 py-16">
 				<div
-					class="relative z-10 grid grid-cols-1 max-w-52 mx-auto md:max-w-lg md:place-items-center md:grid-cols-2 lg:grid-cols-4 gap-8 text-center lg:max-w-3xl lg:mx-auto">
+					class="relative z-10 grid grid-cols-1 max-w-52 mx-auto md:max-w-xl md:grid-cols-2 lg:grid-cols-4 gap-8 text-center lg:max-w-4xl lg:mx-auto">
 					<div class="flex flex-col gap-4 items-center w-full">
 						<img class="w-20"
 							src="https://tristate.coop/sites/default/files/images/icons/efficiency/renewable-energy.svg" />
+						<div class="text-pretty">We empower members to make new investments and encourage an
+							all-of-the-above resource
+							approach to drive rural economic
+							development.</div>
 						<a href="#energy-investments"
-							class="w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
+							class="mt-auto w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
 							Energy Investments
 						</a>
 					</div>
 					<div class="flex flex-col gap-4 items-center w-full">
 						<img class="w-20"
 							src="https://tristate.coop/sites/default/files/images/icons/efficiency/mountain.svg" />
+						<div class="text-pretty">We keep our communities and employees safe as we uphold a culture of
+							safety in the field,
+							at the office, and at home. We
+							protect the environment in the states we serve because it provides us with the abundant
+							natural resources that power our
+							communities.</div>
 						<a href="#preserve-and-protect"
-							class="w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
+							class="mt-auto w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
 							Preserve &amp; Protect
 						</a>
 					</div>
 					<div class="flex flex-col gap-4 items-center w-full">
 						<img class="w-20"
 							src="https://tristate.coop/sites/default/files/images/icons/efficiency/house.svg" />
+						<div class="text-pretty">We are good neighbors to the rural communities we serve, giving back
+							and supporting our
+							local economies.</div>
 						<a href="#good-neighbors"
-							class="w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
+							class="mt-auto w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
 							Good Neighbors
 						</a>
 					</div>
 					<div class="flex flex-col gap-4 items-center w-full">
 						<img class="w-20"
 							src="https://tristate.coop/sites/default/files/images/icons/efficiency/environment.svg" />
+						<div class="text-pretty">We're all in this together, working closely with our cooperative
+							members to reach our
+							energy goals and ensure
+							affordability and reliability for our consumers.</div>
 						<a href="#shared-success"
-							class="w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
+							class="mt-auto w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
 							Shared Success
 						</a>
 					</div>
@@ -246,7 +261,6 @@
 					<div class="relative z-10 max-w-xl mx-auto text-center">
 						<h3 class="mt-4 font-serif font-semibold text-xl text-balance">Energy Investments</h3>
 						<p class="mt-2 text-sm text-balance">
-							An all-of-the-above approach to meet today’s energy needs.
 							We empower members to make new investments and encourage an all-of-the-above resource
 							approach to drive rural economic
 							development.
@@ -332,9 +346,11 @@
 					<div class="relative z-10 max-w-xl mx-auto text-center">
 						<h3 class="mt-4 font-serif font-semibold text-xl text-balance">Preserve and Protect</h3>
 						<p class="mt-2 text-sm text-balance">
-							Ensuring ‘safety first’ across our Western service territory.
 							We keep our communities and employees safe as we uphold a culture of safety in the field, at
-							the office, and at home.
+							the office, and at home. We
+							protect the environment in the states we serve because it provides us with the abundant
+							natural resources that power our
+							communities.
 
 						</p>
 					</div>
@@ -421,7 +437,6 @@
 					<div class="relative z-10 max-w-xl mx-auto text-center">
 						<h3 class="mt-4 font-serif font-semibold text-xl text-balance">Good Neighbors</h3>
 						<p class="mt-2 text-sm text-balance">
-							Giving back to the communities we serve beyond the grid.
 							We are good neighbors to the rural communities we serve, giving back and supporting our
 							local economies.
 
@@ -497,9 +512,8 @@
 					<div class="relative z-10 max-w-xl mx-auto text-center">
 						<h3 class="mt-4 font-serif font-semibold text-xl text-balance">Shared Success</h3>
 						<p class="mt-2 text-sm text-balance">
-							Achieving affordability and reliability through the cooperative business model. We’re all in
-							this together, working closely with our cooperative members to reach our energy goals and
-							ensure
+							We're all in this together, working closely with our cooperative members to reach our energy
+							goals and ensure
 							affordability and reliability for our consumers.
 
 						</p>
