--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -249,8 +249,8 @@
 				<!-- Hero Image -->
 				<div class="relative flex flex-col justify-center min-h-[40vh] lg:h-[300px] lg:min-h-0">
 					<img src="https://tristate.coop/sites/default/files/2025-05/solar-panels-close-up-at-dusk.jpg"
-						alt="Power lines running through mountain landscape"
-						class="absolute inset-0 w-full h-full object-cover z-0" />
+						alt="Solar panels close up at dusk" class="absolute inset-0 w-full h-full object-cover z-0" />
+					<div class="absolute inset-0 bg-black/20 z-5"></div>
 					<div class="size-44 aspect-square mx-auto p-4 z-10">
 						<img src="./assets/images/efficiency/renewable-energy-white.svg" />
 					</div>
@@ -336,8 +336,9 @@
 					<img src="https://tristate.coop/sites/default/files/2025-05/heavy-machinery-creating-fire-breaks.jpg"
 						alt="Heavy machinery creating fire breaks in the forest"
 						class="absolute inset-0 w-full h-full object-cover z-0" />
+					<div class="absolute inset-0 bg-black/20 z-5"></div>
 					<div class="size-44 aspect-square mx-auto p-4 z-10">
-						<img src="./assets/images/efficiency/mountain-white-shadow.svg" />
+						<img src="./assets/images/efficiency/mountain-white.svg" />
 					</div>
 				</div>
 
@@ -427,7 +428,7 @@
 					<img src="https://tristate.coop/sites/default/files/2025-05/homes-under-construction.jpg"
 						alt="Homes under construction" class="absolute inset-0 w-full h-full object-cover z-0" />
 					<div class="absolute inset-0 bg-black/20 z-5"></div>
-					<div class="size-52 aspect-square mx-auto p-4 z-10">
+					<div class="size-44 aspect-square mx-auto p-4 z-10">
 						<img src="./assets/images/efficiency/house-white.svg" />
 					</div>
 				</div>
@@ -502,6 +503,7 @@
 					<img src="https://tristate.coop/sites/default/files/2025-05/tri-state-hub-thompson-meeting-room.jpg"
 						alt="Large meeting room at Tri-State's headquarters in Westminster, Colorado"
 						class="absolute inset-0 w-full h-full object-cover z-0" />
+					<div class="absolute inset-0 bg-black/20 z-5"></div>
 					<div class="size-44 aspect-square mx-auto p-4 z-10">
 						<img src="./assets/images/efficiency/environment-white.svg" />
 					</div>
