Coop Diff: Reorg of top sections.

--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -56,6 +56,7 @@
 				<img src="https://tristate.coop/sites/default/files/2025-05/woman-in-malt-shop.jpg"
 					alt="Power lines running through mountain landscape"
 					class="absolute inset-0 w-full h-full object-cover z-0" />
+				<div class="absolute inset-0 bg-black/30 z-5"></div>
 				<div
 					class="relative z-10 text-white text-center px-5 py-10 max-w-3xl mx-auto leading-none [text-wrap:balance]">
 					<h1 class="text-4xl md:text-5xl font-serif text-balance">The cooperative difference</h1>
@@ -66,69 +67,78 @@
 
 
 			<section class="px-8 py-16">
-				<div class="mx-auto max-w-5xl md:text-center">
+				<div class="mx-auto max-w-xl text-center ">
 					<h2 class="font-serif font-light text-3xl">More than a promise</h2>
+					<p class="text-pretty">
+						Reliable and affordable power. That's our first priority and the driving force behind
+						everything we do.
+					</p>
+					<p>
+						With the support of our 40 members, Tri-State has continuously met this commitment and
+						remained a high-performing, agile
+						cooperative power supplier across the Western states we proudly serve. Our value is further
+						strengthened by investing in
+						our members, employees, consumers, and communities beyond the grid.
+					</p>
 				</div>
+			</section>
 
-				<div class="mx-auto mt-8 max-w-5xl md:grid md:gap-6 md:grid-cols-5 md:items-center lg:gap-12">
-					<div class="md:-mt-8 md:col-span-2">
-						<p class="!text-lg">
-							Reliable and affordable power. That's our first priority and the driving force behind
-							everything we do.
-						</p>
-						<p class="mt-4">
-							With the support of our 40 members, Tri-State has continuously met this commitment and
-							remained a high-performing, agile
-							cooperative power supplier across the Western states we proudly serve. Our value is further
-							strengthened by investing in
-							our members, employees, consumers, and communities beyond the grid.
-						</p>
+			<section class="bg-gray-light relative px-8 py-16">
+				<div
+					class="relative z-10 grid grid-cols-1 max-w-52 mx-auto md:max-w-xl md:grid-cols-2 lg:grid-cols-4 gap-8 text-center lg:max-w-4xl lg:mx-auto">
+					<div class="flex flex-col gap-4 items-center w-full">
+						<img class="w-20"
+							src="https://tristate.coop/sites/default/files/images/icons/efficiency/renewable-energy.svg" />
+						<div class="text-pretty">We empower members to make new investments and encourage an
+							all-of-the-above resource
+							approach to drive rural economic
+							development.</div>
+						<a href="#energy-investments"
+							class="mt-auto w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
+							Energy Investments
+						</a>
 					</div>
-					<div class="mx-auto max-w-lg  md:col-span-3 md:p-6">
-						<ul class="list-none space-y-4 text-left p-0">
-							<li class="flex items-start gap-3">
-								<img src="/assets/images/square-check-regular-gray.svg" class="mt-1 w-5 h-5"
-									alt="check">
-								<span>We empower members to make new investments and encourage an all-of-the-above
-									resource
-									approach to drive
-									rural economic development.</span>
-							</li>
-							<li class="flex items-start gap-3">
-								<img src="/assets/images/square-check-regular-gray.svg" class="mt-1 w-5 h-5"
-									alt="check">
-								<span>We keep our communities and employees safe as we uphold a culture of safety in the
-									field, at the office,
-									and at home.</span>
-							</li>
-							<li class="flex items-start gap-3">
-								<img src="/assets/images/square-check-regular-gray.svg" class="mt-1 w-5 h-5"
-									alt="check">
-								<span>We are good neighbors to the rural communities we serve, giving back and
-									supporting
-									our local
-									economies.</span>
-							</li>
-							<li class="flex items-start gap-3">
-								<img src="/assets/images/square-check-regular-gray.svg" class="mt-1 w-5 h-5"
-									alt="check">
-								<span>We protect the environment in the states we serve because it provides us with the
-									abundant natural
-									resources that power our communities.</span>
-							</li>
-							<li class="flex items-start gap-3">
-								<img src="/assets/images/square-check-regular-gray.svg" class="mt-1 w-5 h-5"
-									alt="check">
-								<span>We're all in this together, working closely with our cooperative members to reach
-									our
-									energy goals and
-									ensure affordability and reliability for our consumers.</span>
-							</li>
-						</ul>
+					<div class="flex flex-col gap-4 items-center w-full">
+						<img class="w-20"
+							src="https://tristate.coop/sites/default/files/images/icons/efficiency/mountain.svg" />
+						<div class="text-pretty">We keep our communities and employees safe as we uphold a culture of
+							safety in the field,
+							at the office, and at home. We
+							protect the environment in the states we serve because it provides us with the abundant
+							natural resources that power our
+							communities.</div>
+						<a href="#preserve-and-protect"
+							class="mt-auto w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
+							Preserve &amp; Protect
+						</a>
+					</div>
+					<div class="flex flex-col gap-4 items-center w-full">
+						<img class="w-20"
+							src="https://tristate.coop/sites/default/files/images/icons/efficiency/house.svg" />
+						<div class="text-pretty">We are good neighbors to the rural communities we serve, giving back
+							and supporting our
+							local economies.</div>
+						<a href="#good-neighbors"
+							class="mt-auto w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
+							Good Neighbors
+						</a>
+					</div>
+					<div class="flex flex-col gap-4 items-center w-full">
+						<img class="w-20"
+							src="https://tristate.coop/sites/default/files/images/icons/efficiency/environment.svg" />
+						<div class="text-pretty">We're all in this together, working closely with our cooperative
+							members to reach our
+							energy goals and ensure
+							affordability and reliability for our consumers.</div>
+						<a href="#shared-success"
+							class="mt-auto w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
+							Shared Success
+						</a>
 					</div>
 				</div>
-
-				<div class="mx-auto mt-20 max-w-xl text-center">
+			</section>
+			<section class="px-8 py-16">
+				<div class="mx-auto max-w-xl text-center">
 					<p class="!text-lg font-serif">
 						These investments would not be successful without the collaborative efforts of our members,
 						who operate according to the <span class="inline-block">7 Cooperative Principles:</span>
@@ -189,60 +199,7 @@
 
 
 
-			<section class="bg-gray-light relative px-8 py-16">
-				<div
-					class="relative z-10 grid grid-cols-1 max-w-52 mx-auto md:max-w-xl md:grid-cols-2 lg:grid-cols-4 gap-8 text-center lg:max-w-4xl lg:mx-auto">
-					<div class="flex flex-col gap-4 items-center w-full">
-						<img class="w-20"
-							src="https://tristate.coop/sites/default/files/images/icons/efficiency/renewable-energy.svg" />
-						<div class="text-pretty">We empower members to make new investments and encourage an
-							all-of-the-above resource
-							approach to drive rural economic
-							development.</div>
-						<a href="#energy-investments"
-							class="mt-auto w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
-							Energy Investments
-						</a>
-					</div>
-					<div class="flex flex-col gap-4 items-center w-full">
-						<img class="w-20"
-							src="https://tristate.coop/sites/default/files/images/icons/efficiency/mountain.svg" />
-						<div class="text-pretty">We keep our communities and employees safe as we uphold a culture of
-							safety in the field,
-							at the office, and at home. We
-							protect the environment in the states we serve because it provides us with the abundant
-							natural resources that power our
-							communities.</div>
-						<a href="#preserve-and-protect"
-							class="mt-auto w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
-							Preserve &amp; Protect
-						</a>
-					</div>
-					<div class="flex flex-col gap-4 items-center w-full">
-						<img class="w-20"
-							src="https://tristate.coop/sites/default/files/images/icons/efficiency/house.svg" />
-						<div class="text-pretty">We are good neighbors to the rural communities we serve, giving back
-							and supporting our
-							local economies.</div>
-						<a href="#good-neighbors"
-							class="mt-auto w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
-							Good Neighbors
-						</a>
-					</div>
-					<div class="flex flex-col gap-4 items-center w-full">
-						<img class="w-20"
-							src="https://tristate.coop/sites/default/files/images/icons/efficiency/environment.svg" />
-						<div class="text-pretty">We're all in this together, working closely with our cooperative
-							members to reach our
-							energy goals and ensure
-							affordability and reliability for our consumers.</div>
-						<a href="#shared-success"
-							class="mt-auto w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
-							Shared Success
-						</a>
-					</div>
-				</div>
-			</section>
+
 
 
 			<section id="energy-investments">
