Coop Diff: Pretty text and remove "Culture" button

--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -73,7 +73,7 @@
 						Reliable and affordable power. That's our first priority and the driving force behind
 						everything we do.
 					</p>
-					<p>
+					<p class="text-pretty">
 						With the support of our 40 members, Tri-State has continuously met this commitment and
 						remained a high-performing, agile
 						cooperative power supplier across the Western states we proudly serve. Our value is further
@@ -359,10 +359,7 @@
 							having a serious injury, and three employees received awards from the Colorado Mining
 							Association for 30 years without injury.
 						</p>
-						<a href="https://tristate.coop/company-culture"
-							class="mb-6 inline-flex rounded-full border border-black px-4 py-2 font-normal no-underline text-black">
-							Company Culture
-						</a>
+
 					</div>
 
 					<div class="flex justify-center items-center">
