--- a/annual-report-2024.htm
+++ b/annual-report-2024.htm
@@ -91,6 +91,8 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet"
+		href="https://tristate.coop/sites/default/files/css/css_z5ZMP6J7ncjZtOs_I63qX6QwGU6XHgkiNo030ifdVBc.css" />
+	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/css/css_Rli8DIVnIKbjfXhlxva1M3yFKBDc26-qMFDXgVLNaEY.css" />
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/css/css_-UFRzSpfx2tStwj5bYydlkhBR3LXL-MLhjJ2dqKU_nw.css" />
@@ -102,7 +104,7 @@
 	<script src="./assets/js/ScrollSmoother.min.js"></script> -->
 	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
-	<script src="./assets/js/annual-report.js"></script>
+	<script src="./assets/js/annual-report-2024.js"></script>
 	<!-- 
 	-->
 
